Item fields updated